Test commit for dom0less
- code base

mkdir optee_xen; cd optee_xen
repo init -u https://github.com/OP-TEE/manifest.git -m qemu_v8.xml
repo sync
cd build
make toolchains
make run XEN_BOOT=y XEN_DEBUG=y

- stop auto boot in NW u-boot console and apply dtbo then boot
xen by below cmds

setenv fdtovaddr 0x87fc0000
load virtio 0 $fdtovaddr temp_overlay.dtbo
fdt addr $fdt_addr
fdt move $fdt_addr 0x50000000
setenv fdt_addr $fdtaddr
fdt resize 8192
fdt apply $fdtovaddr
load virtio 0 $kernel_addr_r xen.efi && bootefi $kernel_addr_r

Signed-off-by: Mark-PK Tsai <mark-pk.tsai@mediatek.com>

--- a/kconfigs/xen_debug.conf
+++ b/kconfigs/xen_debug.conf
@@ -3,3 +3,8 @@ CONFIG_DEBUG_INFO=y
 CONFIG_DEBUG_LOCKS=y
 CONFIG_VERBOSE_DEBUG=y
 CONFIG_FRAME_POINTER=y
+CONFIG_DEBUG=y
+CONFIG_OVERLAY_DTB=y
+CONFIG_EARLY_PRINTK=y
+CONFIG_EARLY_UART_BASE_ADDRESS=0x9000000
+CONFIG_EARLY_UART_CHOICE_PL011=y
